Generate block light properties from PrismarineJS blocks report  (#78)
* Generate block light properties from PrismerineJS blocks report

This gives us all the light values for default block states, however doesn't account for blocks like the respawn_anchor changing its light emission based on charges.
However, that is a part of custom behaviour anyway that we'll have to define for blocks changing state (so redstone etc) so it should be good

* Optimize the rest of the light engine

I don't think there's much left to optimize given its 0.05% of the chunk gen

* fix: bootstrap the properties